--- a/src/Project/Website/code/packages.config
+++ b/src/Project/Website/code/packages.config
@@ -85,6 +85,7 @@
   <package id="Sitecore.Marketing.xMgmt.ReferenceData" version="9.3.0" targetFramework="net472" />
   <package id="Sitecore.Mvc" version="9.3.0" targetFramework="net472" />
   <package id="Sitecore.Mvc.Analytics" version="9.3.0" targetFramework="net472" />
+  <package id="Sitecore.Mvc.Analytics.NoReferences" version="9.0.180604" targetFramework="net472" developmentDependency="true" />
   <package id="Sitecore.Nexus" version="9.3.0" targetFramework="net472" />
   <package id="Sitecore.Nexus.Consumption" version="1.1.1" targetFramework="net472" />
   <package id="Sitecore.Nexus.Licensing" version="2.0.6" targetFramework="net472" />
