Comments Secton(under Article(InsertOption) - comment from SitecoreInstance

--- a/src/Project/Website/code/Sitecore.Project.Website.csproj
+++ b/src/Project/Website/code/Sitecore.Project.Website.csproj
@@ -466,6 +466,7 @@
     <Content Include="Views\TrnListingCard\Index.cshtml" />
     <Content Include="Views\TrnHallOfFame\Index.cshtml" />
     <Content Include="Views\DepartmentPageLayout.cshtml" />
+    <Content Include="Views\TrnComments\Index.cshtml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -473,6 +474,7 @@
     <Compile Include="Controllers\TrnArticlesListingController.cs" />
     <Compile Include="Controllers\TrnAuthorDetailsController.cs" />
     <Compile Include="Controllers\TrnBreadcrumbController.cs" />
+    <Compile Include="Controllers\TrnCommentsController.cs" />
     <Compile Include="Controllers\TrnHallOfFameController.cs" />
     <Compile Include="Controllers\TrnListingCardController.cs" />
     <Compile Include="Controllers\TrnStaffDetailsController.cs" />
@@ -482,6 +484,7 @@
     <Compile Include="Models\ArticleListing.cs" />
     <Compile Include="Models\AuthorDetails.cs" />
     <Compile Include="Models\BreadcrumbItem.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DeptListingCard.cs" />
     <Compile Include="Models\StaffDetails.cs" />
     <Compile Include="Models\StudentDetails.cs" />
